--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,14 @@
 {
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all"
+
+  "trailingComma": "all",
+  "overrides": [
+    {
+      "files": "*.hbs",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
 }
